style change fixes double-scrollbar

--- a/assets/css/demostyle.css
+++ b/assets/css/demostyle.css
@@ -6,6 +6,7 @@ body, html {
     height: 100%;
     margin: 0;
     padding: 0;
+    position: fixed;
 }
 
 header {
@@ -16,6 +17,7 @@ header {
     padding: 30px;
     padding-top: 0px;
     float: left;
+    position: fixed;
 }
 
 section {
@@ -27,8 +29,12 @@ section {
 }
 
 footer {
-    float: bottom;
     font-size: 9px;
+    color: whitesmoke;
+    font-family: 'Segoe UI';
+    font-size: 12px;
+    bottom: 10px;
+    position: fixed;
 }
 nav {
     display: list-item block;
